issue:scrollbar visible

--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -1,16 +1,19 @@
-body, html, p {
-    margin: 0;
-    padding: 0;
-    /* This ensures that the body takes the full viewport */
-    width: 100%;
-    height: 100%;
-    /* This removes the scroll */
-    /* overflow: hidden; */
+body,
+html,
+p {
+  margin: 0;
+  padding: 0;
+  /* This ensures that the body takes the full viewport */
+  width: 100%;
+  height: 100%;
+}
+.no-scrollbar {
+  /* Hide scrollbar for Chrome, Safari, and Opera */
+  ::-webkit-scrollbar {
+    display: none;
   }
-/* 
-div{
-    position: 'relative'; 
-    width: 100%;
-    height: 100%; 
-    border: '10px solid red';
-}   */
+
+  /* Hide scrollbar for IE, Edge, and Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
